--- a/netlify.toml
+++ b/netlify.toml
@@ -22,7 +22,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src 'self'; script-src 'self'; style-src 'self';"
+    Content-Security-Policy = "default-src 'self'; script-src 'self'; style-src 'self' https://dummyjson.com;"
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
