--- a/netlify.toml
+++ b/netlify.toml
@@ -24,7 +24,7 @@
   [headers.values]
     Content-Security-Policy = """
                   default-src 'self'; 
-                  connect-src 'self' https://dummyjson.com https://picsum.photos;
+                  connect-src 'self' https://dummyjson.com https://picsum.photos/200;
                   script-src 'self'; 
                   style-src 'self';
                   img-src 'self';
