--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -12,7 +12,12 @@ jobs:
       - uses: actions/checkout@v4
 
       # ( Build to ./dist or other directory... )
-
+      - name: Set up Node.js 18
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18.x
+      - name: Install dependencies
+        run: npm install
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v3.0
         with:
